# mrblackjack

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: x.sh
.github/workflows/: ci.yml
schema/: test_spec.yaml
src/: bin.rs  check.rs  collector.rs  config.rs  discovery.rs  error.rs  file.rs  lib.rs  make_schema.rs  manifest.rs  match_object.rs  namespace.rs  result_formatting.rs  run_test.rs  script.rs  test_spec.rs  wait.rs
test/: run.sh
test/cluster/test-cluster-test/01/: script.sh  test.yaml
test/cluster/test-cluster-test/02/: script.sh  test.yaml
test/cluster/test-retry/: script.sh  test.yaml
test/test-apply-delete-from-file/: test.yaml
test/test-apply-from-dir/: test.yaml
test/test-apply-from-file/: test.yaml
test/test-label-selector/: nginx-deployment-foo.yaml  test.yaml
test/test-restarts/: test.yaml
test/test-script/: test.yaml
test/test-sleep/: nginx-deployment-patch.yaml
test/user/test-allows-omitting-test-name/: test.yaml
test/user/test-apply-delete-from-dir/: test.yaml
test/user/test-apply-delete-from-file/: test.yaml
test/user/test-apply-from-dir/: test.yaml
test/user/test-apply-from-file/: test.yaml
test/user/test-empty-label/: nginx-deployment-other-label.yaml  test.yaml
test/user/test-long-test-name/: test.yaml
test/user/test-namespace/: check-all.sh  foospace.yaml  script.sh  test.yaml
test/user/test-namespace/nginx/: namespace.yaml  nginx-deployment.yaml
test/user/test-restarts/: test.yaml
test/user/test-script/: script.sh  test.yaml
test/user/test-sleep/: test.yaml
